# obstacle_detector

./: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  rviz_plugins.xml
config/: lidar_objects.param.yaml
config/lidar_objects/: obstacle_extractor.param.yaml  obstacle_tracker.param.yaml  scans_merger.param.yaml
include/processing_lidar_objects/: obstacle_extractor.h  obstacle_publisher.h  obstacle_tracker.h  scans_merger.h
include/processing_lidar_objects/displays/: circle_visual.h  obstacles_display.h  segment_visual.h
include/processing_lidar_objects/panels/: obstacle_extractor_panel.h  obstacle_publisher_panel.h  obstacle_tracker_panel.h  scans_merger_panel.h
include/processing_lidar_objects/utilities/: circle.h  figure_fitting.h  math_utilities.h  point.h  point_set.h  segment.h  tracked_obstacle.h
include/rclcpp_components/: visibility_control.hpp
launch/: demo.launch  lidar_objects.launch  lidar_objects.launch.py  nodelets.launch  nodes.launch
msg/: Obstacles.msg
resources/: obstacle_detector.rviz
src/: obstacle_extractor.cpp  obstacle_publisher.cpp  obstacle_tracker.cpp  scans_merger.cpp
src/displays/: circle_visual.cpp  obstacles_display.cpp  segment_visual.cpp
src/nodelets/: obstacle_extractor_nodelet.cpp  obstacle_publisher_nodelet.cpp  obstacle_tracker_nodelet.cpp  scans_merger_nodelet.cpp
src/nodes/: obstacle_extractor_node.cpp  obstacle_publisher_node.cpp  obstacle_tracker_node.cpp  scans_merger_node.cpp
src/panels/: obstacle_extractor_panel.cpp  obstacle_publisher_panel.cpp  obstacle_tracker_panel.cpp  scans_merger_panel.cpp
