<?xml version="1.0"?>
<package format="3">
  <name>processing_lidar_objects</name>
  <version>1.2.0</version>
  <description>Detect obstacles in form of line segments and circles from 2D laser scans.</description>
  <maintainer email="utcoupe@assos.utc.fr">Association UTCoupe</maintainer>
  <author>Mateusz Przybyla</author>
  <author>Gaëtan Blond</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend> <!-- replaces catkin (only for cpp) -->
  <build_depend>rosidl_default_generators</build_depend> <!-- replaces message_generation -->
  <exec_depend>ros_idl_default_runtime</exec_depend> <!-- replaces message_runtime -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rviz2</depend> <!-- replaces rviz-->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend> <!-- replaces nodelet -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>tf2_sensor_msgs</depend>

  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <rviz plugin="${prefix}/rviz_plugins.xml"/> -->
    <!-- <nodelet plugin="${prefix}/nodelet_plugins.xml" /> -->
  </export>
</package>
